--- a/ToDoManager/package.json
+++ b/ToDoManager/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/material-top-tabs": "^5.3.15",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
+    "firebase": "^8.6.8",
     "react": "17.0.1",
     "react-native": "0.64.2",
     "react-native-gesture-handler": "^1.10.3",
@@ -23,6 +24,7 @@
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.4.0",
     "react-native-tab-view": "^3.0.1",
+    "react-navigation": "^4.4.4",
     "react-navigation-stack": "^2.10.4",
     "typescript": "^4.3.4"
   },
